manifests/rules-argo.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-rules
  namespace: argocd
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  paths:
    - path: /argocd
      pathType: Prefix
      backend:
        service:
          name: argocd-server
          port:
            number: 80
